<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_launcher_foreground"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:targetApi="lollipop">


    -

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="30dp" />

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="20dp"
            android:textAlignment="viewEnd"
            android:textSize="25sp"
            android:textStyle="bold" />


        -

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/clr"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

        </LinearLayout>


        -

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/x"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

        </LinearLayout>


        -

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/substract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

        </LinearLayout>


        -

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

        </LinearLayout>


        -

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/modulus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/mod"
                android:textColor="@color/black"
                android:layout_marginStart="5dp" />

            <Button
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/white"
                android:backgroundTint="@color/white"
                android:text="@string/equals"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:backgroundTint="@color/white"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="5dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>